# terraform-aws-ecs-events-to-slack

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  .tfsec.yaml  AGENTS.md  Dependabot_implementation.md  Dockerfile  Dockerize_Lambda_Deployment_report_21_01_2026.md  Final_Status_For_Today.md  OLLAMA_CHAT_terraform-aws-ecs-events-to-slack_2026-01-19_15-29-46.md  PROJECT_MASTER:ECS_EVENTS_TO_SLACK.md  README.md  VERIFICATION_REPORT_20_JAN_2026.md  amazon_q.tf  backend.tf  data.tf  deploy_iam.tf  main.py  main.tf  outputs.tf  pyproject.toml  requirents.txt  sns.tf  variables.tf  versions.tf
.github/: dependabot.yml
.github/workflows/: base.yml  build_docker.yml  ci.yml  cursor-code-review.yml  review.yml
docs/: OLLAMA_CHAT_FIVEXL_2026-01-19_15-28-57.md  Phase2.md  Progress_Report_19_01_2026.md  fix_planning_terraform-aws-ecs-events-to-slack_2026-01-19_15-19-51.md  ollamafm_report_terraform-aws-ecs-events-to-slack_2026-01-19_15-07-45.md
examples/all-services/: main.tf
examples/complete/: main.tf
examples/complex/: main.tf
examples/container-instance-state/: main.tf
examples/simple/: main.tf
examples/simple-secretsmanager/: main.tf
examples/simple-ssm_parameter/: main.tf
functions/: .dockerignore  .gitignore  Dockerfile  Pipfile  amazon_q_notifications.py  pyproject.toml  requirements.txt  slack_notifications.py
functions/test/: eventbridge_event.json  sns_event.json  task_definition_awslogs.json
functions/tests/: test_infra.py
modules/iam/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
modules/slack_workspace/: README.md  main.tf  variables.tf
modules/team_workspace/: README.md  main.tf  variables.tf  versions.tf
