[project]
name = "ecs-events-to-slack"
version = "1.0.0"
description = "Receive events from EventBridge and send them to Slack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.26.90",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
