[project]
name = "ecs-events-to-slack"
version = "1.0.0"
description = "Forward ECS events to Slack"
authors = [
    {name = "FivexL Consulting Services", email = "open.source@fivexl.io"}
]
requires-python = ">=3.11"
dependencies = [
    "awslambdaric>=3.1.1",
    "boto3>=1.26.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.0.267",
    "boto3-stubs[events,ecs]>=1.26.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
# Standard FivexL Excludes
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox",
    ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "venv",
]

line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = [
  "F", "ANN", "ARG", "E", "W", "YTT", "B", "Q", "T10",
  "PLC", "PLE", "PLR", "PLW", "PIE", "PYI", "TID", "ISC", "TCH", "C4", "PGH"
]
ignore = ["PLC0415"]

# Allow autofix
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ANN", "PLR2004"]

[tool.pyright]
reportGeneralTypeIssues = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = []
