[project]
name = "ecs-events-to-slack"
version = "1.0.0"
description = "Receive events from EventBridge and send them to Slack"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.63",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]
